--- a/index.html
+++ b/index.html
@@ -4,114 +4,23 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-      <!-- CSS -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css">
-      <!--[if lte IE 8]>
+      <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/pure-min.css">
+      [if lte IE 8]>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-old-ie-min.css">
-      <![endif]-->
-      <!--[if gt IE 8]><!-->
+      <![endif]--> 
+      <!--[if gt IE 8]><!
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.6.0/grids-responsive-min.css">
-      <!--<![endif]-->
+      <![endif]
 
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-      <style>
-body {
-  background-color: #F8F8F8;
-  color: #1E2835;
-  font-size: 1.2em;
-}
-
-a, a:visited, a:hover, a:active {
-  text-decoration: none;
-  color: inherit;
-  transition: color 0.5s;
-}
-
-a:hover {
-  color: #3476FF;
-}
-
-form {
-  padding: 20px;
-  text-align: center;
-  background-color: #575E68;
-}
-
-form.pure-form {
-  margin-bottom: 0;
-}
-
-img {
-  vertical-align: middle;
-}
-
-.button-primary {
-  background-color: #3476FF;
-}
-
-
-h1 {
-  padding: 20px;
-  background-color: #CDDDFF;
-  margin: 0 0 20px 0;
-  text-align: center;
-}
-
-h2 {
-  margin: 0 0 5px 0;
-}
-
-div#result {
-  transition: opacity 1s;
-}
-
-div#result.transparent{
-  opacity : 0;
-}
-
-div.main {
-  padding: 60px;
-}
-
-div.main img {
-  float: left;
-}
-
-div.main .artist {
-  padding-left: 84px;
-  padding: 0 20px 20px 84px;
-  margin-bottom: 20px;
-}
-
-ul {
-  padding: 0;
-}
-
-li {
-  list-style-type: none;
-}
-
-section.credentials {
-  background-color: lightcyan;
-  padding: 10px;
-  display: none;
-}
-
-section.error {
-  background-color: pink;
-  font-size: 14pt;
-  font-weight: bold;
-  padding: 10px;
-  display: none;
-}
-      </style>
+      <style link href="style.css" rel="stylesheet" type="text/css"></style>
 
 
       <!-- JS -->
       <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/1.0.0/fetch.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.2.1/qs.min.js"></script>
+      <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.2.1/qs.min.js"></script> -->
       <script src="app.js"></script>
 
       <script>
@@ -154,6 +63,7 @@ Spotify.prototype.onSearchSubmitted = function(event) {
 };
 
 Spotify.prototype.search = function(name) {
+  console.log('spotify.prototype.search ran');  
   getArtist(name).then(this.onSearchDone.bind(this));
 };
 
