--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <script src="app.js"></script>
 
       <script>
-var Spotify = function() {
+const Spotify = function() {
   this.searchForm = $('form');
   this.searchForm.submit(this.onSearchSubmitted.bind(this));
   this.searchBox = $('input');
