final changes before scratch start

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Spotify.prototype.onSearchSubmitted = function(event) {
 };
 
 Spotify.prototype.search = function(name) {
-  console.log('spotify.prototype.search ran');  
+    console.log(localStorage); 
   getArtist(name).then(this.onSearchDone.bind(this));
 };
 
